2013-02-12  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* ieee754r/acosd32.c (acosd): Use internal symbols for function calls.
	* ieee754r/asind32.c (asind): Likewise.
	* ieee754r/cbrtd32.c (cbrtd): Likewise.
	* ieee754r/erfd32.c (erfd): Likewise.
	* ieee754r/tgammad32.c (tgammad): Likewise.
	* sysdeps/powerpc/dfpu/expd64.c (expd64): Likewise.
	* sysdeps/powerpc/dfpu/powd64.c (powd64): Likewise.
	* ieee754r/lgammad32.c (__lgammar_r): Fix isinf/isnan tests using
	decimal implementations. Also use internal symbols for functions
	calls.
	

2013-02-12  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* ieee754r/signbitd32.c (signbitd): Add hidden_def.
	* include/ieee754r_private.h: Likewise.

2013-02-12  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* ieee754r/fabsd32.c (fabsd): Add hidden_def.
	* include/ieee754r_private.h: Likewise.

2013-02-12  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* fmt_d32.c (__dfp_adjust_precision): Fix PLT calls for FP classify
	functions.
	* ieee754r/acosd32.c: Likewise.
	* ieee754r/asind32.c: Likewise.
	* ieee754r/cbrtd32.c: Likewise.
	* ieee754r/cosd32.c: Likewise.
	* ieee754r/coshd32.c: Likewise.
	* ieee754r/exp2d32.c: Likewise.
	* ieee754r/expd32.c: Likewise.
	* ieee754r/expm1d32.c: Likewise.
	* ieee754r/fdimd32.c: Likewise.
	* ieee754r/fmad32.c: Likewise.
	* ieee754r/fmodd32.c: Likewise.
	* ieee754r/frexpd32.c: Likewise.
	* ieee754r/hypotd32.c: Likewise.
	* ieee754r/ldexpd32.c: Likewise.
	* ieee754r/llroundd32.c: Likewise.
	* ieee754r/nearbyintd32.c: Likewise.
	* ieee754r/nextafterd32.c: Likewise.
	* ieee754r/nexttowardd32.c: Likewise.
	* ieee754r/powd32.c: Likewise.
	* ieee754r/remainderd32.c: Likewise.
	* ieee754r/scalblnd32.c: Likewise.
	* ieee754r/scalbnd32.c: Likewise.
	* ieee754r/sind32.c: Likewise.
	* ieee754r/sinhd32.c: Likewise.
	* ieee754r/tand32.c: Likewise.
	* ieee754r/tgammad32.c: Likewise.
	* include/convert.h: Likewise.
	* sysdeps/powerpc/dfpu/expd64.c: Likewise.